# shard

./: .gitignore  CHANGES_SUMMARY.txt  Cargo.toml  IMPLEMENTATION_SUMMARY.md  MODERN_NNUE_REFACTORING.md  NNUE_IMPROVEMENTS.md  README.md  REFACTORING_SUMMARY.md  build.sh  match.sh  run.sh  temp.out  test_timecat_features  todo
.github/workflows/: rust.yml
fuzzy_testing/: main.py
reference_testing/: main.py
shard-trainer/: README.md  main.py  pyproject.toml
src/: definitions.rs  evaluate.rs  main.rs  nnue.rs  uci.rs
src/definitions/: bitboards.rs  board.rs  castling.rs  color.rs  file.rs  mod.rs  move_.rs  piece.rs  rank.rs  square.rs  undo.rs
src/utils/: bitboards.rs  identification.rs  mod.rs  offsets.rs  zobrist.rs
utils/: build.sh  match.sh
