[package]
name = "shard"
version = "3.1.0"
edition = "2021"
authors = ["Saphereye <adarshdas950@gmail.com>"]

[dependencies]
anyhow = "1.0.98"
burn = { version = "0.17.1", features = ["ndarray", "train", "std"] }
chess = "3.2.0"
ndarray = "0.16.1"
ndarray-npy = "0.9.1"
ndarray-npz = "0.4.2"
nom = "7.1.3"
npyz = "0.8.4"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
