[package]
name = "shard"
version = "4.5.0"
edition = "2021"
authors = ["Saphereye <adarshdas950@gmail.com>"]

[dependencies]
chess = "3.2.0"
nom = "7.1.3"
timecat = { version = "1.49.2", default-features = false, features = ["inbuilt_nnue"] }

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"
